--- a/index.html
+++ b/index.html
@@ -514,23 +514,27 @@
     .goal-linker__toggle[disabled]{ opacity:.5; cursor:not-allowed; }
     .goal-linker__history[hidden]{ display:none; }
 
-    .practice-dashboard__card{ width:min(1040px,96vw); max-height:92vh; display:flex; flex-direction:column; gap:1.25rem; padding:1.5rem 1.75rem; overflow:hidden; }
-    .practice-dashboard__header{ display:flex; align-items:center; justify-content:space-between; gap:.75rem; }
-    .practice-dashboard__title{ font-size:1.25rem; font-weight:700; color:#0f172a; }
+
+    .practice-dashboard{ --dashboard-surface:var(--card-bg); --dashboard-border:rgba(148,163,184,.28); --dashboard-shadow:0 28px 48px rgba(15,23,42,.12); --dashboard-header-bg:#F8FAFC; --dashboard-grid-stripe:rgba(241,245,249,.45); --dashboard-chip-bg:rgba(148,163,184,.12); --dashboard-status-ok:rgba(34,197,94,.16); --dashboard-status-ok-text:#166534; --dashboard-status-mid:rgba(250,204,21,.18); --dashboard-status-mid-text:#92400E; --dashboard-status-ko:rgba(248,113,113,.22); --dashboard-status-ko-text:#991B1B; --dashboard-status-na:#F8FAFC; --dashboard-status-na-text:#94A3B8; }
+    .practice-dashboard.goal-modal{ display:flex; align-items:center; justify-content:center; padding:clamp(.75rem,2vw,1.5rem); }
+    .practice-dashboard.goal-modal .modal-card{ padding:0; background:transparent; box-shadow:none; border:0; }
+    .practice-dashboard__card{ width:min(1080px,calc(100vw - 2rem)); max-height:min(94vh,820px); display:flex; flex-direction:column; gap:1.5rem; padding:1.75rem clamp(1.25rem,3vw,2.25rem); overflow:hidden; background:var(--dashboard-surface); border:1px solid var(--dashboard-border); border-radius:1.25rem; box-shadow:var(--dashboard-shadow); }
+    .practice-dashboard__header{ display:flex; flex-wrap:wrap; align-items:flex-start; justify-content:space-between; gap:1rem; }
+    .practice-dashboard__title{ font-size:1.25rem; font-weight:700; color:#0f172a; letter-spacing:-.01em; }
     .practice-dashboard__header-actions{ display:flex; align-items:center; gap:.75rem; flex-wrap:wrap; justify-content:flex-end; }
-    .practice-dashboard__body{ overflow-y:auto; padding-right:.25rem; margin-right:-.25rem; display:flex; flex-direction:column; gap:1.75rem; }
+    .practice-dashboard__body{ flex:1 1 auto; overflow-y:auto; padding-right:.25rem; margin-right:-.25rem; display:flex; flex-direction:column; gap:1.5rem; }
     .practice-dashboard__section{ display:flex; flex-direction:column; gap:1rem; }
     .practice-dashboard__section-head{ display:flex; align-items:center; justify-content:space-between; gap:.75rem; flex-wrap:wrap; }
-    .practice-dashboard__section-title{ font-weight:600; font-size:1rem; color:#0f172a; }
-    .practice-dashboard__table-wrapper{ border:1px solid #E2E8F0; border-radius:1rem; overflow:auto; background:#fff; box-shadow:0 18px 32px rgba(15,23,42,.08); }
+    .practice-dashboard__section-title{ font-weight:600; font-size:1rem; color:#0f172a; letter-spacing:-.01em; }
+    .practice-dashboard__table-wrapper{ border:1px solid var(--dashboard-border); border-radius:1rem; overflow:auto; background:var(--dashboard-surface); box-shadow:0 18px 32px rgba(15,23,42,.08); }
     .practice-dashboard__table-wrapper::-webkit-scrollbar{ height:8px; }
     .practice-dashboard__table-wrapper::-webkit-scrollbar-thumb{ background:#CBD5F5; border-radius:999px; }
-    .practice-dashboard__matrix{ width:100%; border-collapse:separate; border-spacing:0; min-width:720px; }
-    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:#F8FAFC; padding:.6rem .75rem; text-align:center; font-size:.7rem; text-transform:uppercase; letter-spacing:.08em; color:#94A3B8; border-bottom:1px solid #E2E8F0; z-index:5; }
-    .practice-dashboard__matrix thead th:first-child{ left:0; z-index:6; }
+    .practice-dashboard__matrix{ width:100%; border-collapse:separate; border-spacing:0; min-width:660px; }
+    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.6rem .75rem; text-align:center; font-size:.7rem; text-transform:uppercase; letter-spacing:.08em; color:#64748B; border-bottom:1px solid rgba(148,163,184,.35); z-index:5; }
+    .practice-dashboard__matrix thead th:first-child{ left:0; z-index:6; box-shadow:1px 0 0 rgba(226,232,240,.45); }
     .practice-dashboard__matrix thead th span{ display:block; white-space:nowrap; }
     .practice-dashboard__matrix-head-consigne{ text-align:left; min-width:220px; }
-    .practice-dashboard__matrix-consigne{ position:sticky; left:0; background:#fff; padding:.75rem .9rem; border-right:1px solid #E2E8F0; box-shadow:1px 0 0 rgba(226,232,240,.6); z-index:4; }
+    .practice-dashboard__matrix-consigne{ position:sticky; left:0; background:var(--dashboard-surface); padding:.75rem .9rem; border-right:1px solid rgba(226,232,240,.65); box-shadow:1px 0 0 rgba(226,232,240,.45); z-index:4; }
     .practice-dashboard__row-head{ display:flex; align-items:center; gap:.75rem; }
     .practice-dashboard__row-indicator{ width:.45rem; height:2.5rem; border-radius:999px; background:var(--row-accent,#CBD5F5); flex-shrink:0; }
     .practice-dashboard__row-info{ display:flex; flex-direction:column; gap:.35rem; }
@@ -557,31 +561,31 @@
     }
     .practice-dashboard__row-meta{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
     .practice-dashboard__matrix tbody td{ padding:.45rem .35rem; text-align:center; }
-    .practice-dashboard__matrix tbody tr:nth-child(even){ background:rgba(241,245,249,.35); }
+    .practice-dashboard__matrix tbody tr:nth-child(even){ background:var(--dashboard-grid-stripe); }
     .practice-dashboard__cell{ position:relative; width:100%; min-width:3.5rem; padding:.55rem .35rem; border-radius:.75rem; border:1px solid transparent; font-weight:600; font-size:.85rem; background:#F8FAFC; color:#0f172a; display:flex; align-items:center; justify-content:center; transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease; }
-    .practice-dashboard__cell--ok{ background:rgba(34,197,94,.16); color:#166534; }
-    .practice-dashboard__cell--mid{ background:rgba(250,204,21,.18); color:#92400E; }
-    .practice-dashboard__cell--ko{ background:rgba(248,113,113,.22); color:#991B1B; }
-    .practice-dashboard__cell--na{ background:#F8FAFC; color:#94A3B8; border-color:#E2E8F0; }
+    .practice-dashboard__cell--ok{ background:var(--dashboard-status-ok); color:var(--dashboard-status-ok-text); }
+    .practice-dashboard__cell--mid{ background:var(--dashboard-status-mid); color:var(--dashboard-status-mid-text); }
+    .practice-dashboard__cell--ko{ background:var(--dashboard-status-ko); color:var(--dashboard-status-ko-text); }
+    .practice-dashboard__cell--na{ background:var(--dashboard-status-na); color:var(--dashboard-status-na-text); border-color:#E2E8F0; }
     .practice-dashboard__cell--empty{ font-weight:500; }
     .practice-dashboard__cell[data-has-note="1"]::after{ content:""; position:absolute; top:6px; right:6px; width:8px; height:8px; border-radius:999px; background:#0EA5E9; }
     .practice-dashboard__cell:hover{ transform:translateY(-1px); box-shadow:0 6px 14px rgba(15,23,42,.12); border-color:rgba(148,163,184,.35); }
     .practice-dashboard__cell:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
-    .practice-dashboard__hint{ font-size:.8rem; color:#94A3B8; text-align:right; }
-    .practice-dashboard__chart-panel{ display:flex; flex-direction:column; gap:.5rem; }
-    .practice-dashboard__chart-scroll{ border-radius:1rem; overflow-x:auto; padding-bottom:.25rem; margin-bottom:-.25rem; cursor:grab; -webkit-overflow-scrolling:touch; touch-action:pan-y; }
+    .practice-dashboard__hint{ font-size:.8rem; color:#64748B; text-align:right; }
+    .practice-dashboard__chart-panel{ display:flex; flex-direction:column; gap:.65rem; }
+    .practice-dashboard__chart-scroll{ border-radius:1rem; overflow-x:auto; padding-bottom:.25rem; margin-bottom:-.25rem; cursor:grab; -webkit-overflow-scrolling:touch; touch-action:pan-y; scroll-snap-type:x proximity; }
     .practice-dashboard__chart-scroll:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__chart-scroll.is-dragging{ cursor:grabbing; user-select:none; }
     .practice-dashboard__chart-scroll::-webkit-scrollbar{ height:10px; }
     .practice-dashboard__chart-scroll::-webkit-scrollbar-track{ background:transparent; }
     .practice-dashboard__chart-scroll::-webkit-scrollbar-thumb{ background:#CBD5F5; border-radius:999px; }
-    .practice-dashboard__chart-card{ border:1px solid #E2E8F0; border-radius:1rem; background:#fff; padding:1rem 1.25rem; min-height:280px; box-shadow:0 18px 32px rgba(15,23,42,.08); position:relative; }
+    .practice-dashboard__chart-card{ border:1px solid var(--dashboard-border); border-radius:1rem; background:var(--dashboard-surface); padding:1rem 1.25rem; min-height:280px; box-shadow:0 18px 32px rgba(15,23,42,.08); position:relative; }
     .practice-dashboard__chart-canvas{ position:relative; min-height:280px; min-width:520px; }
     .practice-dashboard__chart-card canvas{ width:100%; height:100%; }
     .practice-dashboard__chart-caption{ font-size:.85rem; color:#64748B; }
     .practice-dashboard__chart-controls{ display:flex; flex-wrap:wrap; gap:.5rem; align-items:center; }
     .practice-dashboard__chart-zoom{ display:flex; flex-wrap:wrap; gap:.5rem; align-items:center; }
-    .practice-dashboard__zoom-btn{ border:1px solid #E2E8F0; background:#fff; border-radius:.75rem; padding:.35rem .75rem; font-size:.8rem; font-weight:600; color:#334155; transition:background .15s ease,border-color .15s ease,color .15s ease; }
+    .practice-dashboard__zoom-btn{ border:1px solid rgba(148,163,184,.35); background:#fff; border-radius:.75rem; padding:.35rem .75rem; font-size:.8rem; font-weight:600; color:#334155; transition:background .15s ease,border-color .15s ease,color .15s ease; }
     .practice-dashboard__zoom-btn:hover{ background:var(--accent-50); border-color:var(--accent-300,#cbd5f5); }
     .practice-dashboard__zoom-btn.is-active{ background:var(--accent-600); color:#fff; border-color:var(--accent-600); cursor:default; }
     .practice-dashboard__filter{ display:flex; flex-direction:column; gap:.25rem; font-size:.75rem; color:#64748B; }
@@ -594,11 +598,38 @@
     .practice-dashboard__view-btn.is-active{ background:#fff; color:#0f172a; box-shadow:0 8px 18px rgba(15,23,42,.14); }
     .practice-dashboard__view-btn:disabled{ opacity:.55; cursor:default; }
     .practice-dashboard__view-btn:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
-    .practice-dashboard__chart-option{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .6rem; border-radius:.75rem; background:#F8FAFC; border:1px solid #E2E8F0; font-size:.8rem; color:#475569; }
+    .practice-dashboard__chart-option{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .6rem; border-radius:.75rem; background:#F8FAFC; border:1px solid rgba(148,163,184,.3); font-size:.8rem; color:#475569; }
     .practice-dashboard__chart-option input{ accent-color:var(--accent-600); }
     .practice-dashboard__chart-empty{ font-size:.85rem; color:#94A3B8; }
     .practice-dashboard__empty{ padding:1.25rem; border-radius:1rem; border:1px dashed #CBD5F5; background:#F8FAFC; font-size:.9rem; color:#64748B; text-align:center; }
     .practice-dashboard__empty-row{ padding:2rem 1rem; text-align:center; font-size:.9rem; color:#94A3B8; }
+    @media (max-width: 1024px){
+      .practice-dashboard__card{ width:min(100%,calc(100vw - 1.5rem)); }
+    }
+    @media (max-width: 768px){
+      .practice-dashboard.goal-modal{ padding:0; align-items:stretch; }
+      .practice-dashboard.goal-modal .practice-dashboard__card{ width:100%; max-height:100dvh; min-height:100dvh; border-radius:0; box-shadow:none; border:0; padding:1.5rem 1.25rem; }
+      .practice-dashboard__body{ padding-right:0; margin-right:0; gap:1.25rem; }
+      .practice-dashboard__header{ flex-direction:column; align-items:flex-start; gap:.75rem; }
+      .practice-dashboard__header-actions{ width:100%; flex-direction:column; align-items:stretch; gap:.5rem; justify-content:flex-start; }
+      .practice-dashboard__view-toggle{ width:100%; justify-content:space-between; }
+      .practice-dashboard__view-btn{ flex:1 1 auto; text-align:center; }
+      .practice-dashboard__filter-select{ width:100%; }
+      .practice-dashboard__chart-panel{ gap:.75rem; }
+      .practice-dashboard__chart-card{ min-height:220px; }
+      .practice-dashboard__chart-canvas{ min-width:min(520px,100%); }
+      .practice-dashboard__chart-zoom,
+      .practice-dashboard__chart-controls{ flex-direction:column; align-items:stretch; gap:.4rem; }
+      .practice-dashboard__chart-option{ justify-content:space-between; }
+      .practice-dashboard__table-wrapper{ box-shadow:0 14px 24px rgba(15,23,42,.08); }
+      .practice-dashboard__hint{ text-align:left; }
+    }
+    @media (max-width: 540px){
+      .practice-dashboard__matrix{ min-width:520px; }
+      .practice-dashboard__title{ font-size:1.15rem; }
+      .practice-dashboard__section-title{ font-size:.95rem; }
+    }
+
     .practice-editor{ display:flex; flex-direction:column; gap:1rem; }
     .practice-editor__header{ display:flex; flex-direction:column; gap:.25rem; }
     .practice-editor__title{ font-size:1.05rem; font-weight:600; color:#0f172a; }
@@ -614,18 +645,6 @@
     .practice-editor__select:focus-visible,
     .practice-editor__textarea:focus-visible{ outline:3px solid var(--accent-200); outline-offset:1px; border-color:var(--accent-400); }
     .practice-editor__actions{ display:flex; justify-content:flex-end; gap:.5rem; }
-
-    @media (max-width: 768px){
-      .practice-dashboard__matrix{ min-width:640px; }
-    }
-    @media (max-width: 640px){
-      .practice-dashboard__card{ padding:1.25rem; }
-      .practice-dashboard__header{ align-items:flex-start; flex-direction:column; gap:.5rem; }
-      .practice-dashboard__header-actions{ width:100%; justify-content:space-between; }
-      .practice-dashboard__hint{ text-align:left; }
-    }
-
-    }
 
   </style>
 </head>
